Akka and Flink images creation